--- a/src/about.njk
+++ b/src/about.njk
@@ -1,7 +1,13 @@
 ---
 layout: default
 title: About Me
+eleventyNavigation:
+  key: about
+  parent: Home
 ---
+<nav>
+  {{ collections.all | eleventyNavigation | eleventyNavigationToHtml | safe }}
+</nav>
 <!-- Font Awesome CDN for social icons -->
   <link
     rel="stylesheet"
@@ -277,18 +283,6 @@ title: About Me
     </p>
 
     <div class="space-y-2 text-base font-semibold text-gray-200 mb-8">
-        <p>
-            📩 <a href="mailto:rakshitsoral@gmail.com" 
-                  class="underline hover:text-blue-400">
-                  rakshitsoral@gmail.com
-            </a>
-        </p>
-        <p>
-            📞 <a href="tel:+919602542617" 
-                  class="underline hover:text-green-400">
-                  +91 96025 42617
-            </a>
-        </p>
     </div>
 
     <p class="text-sm text-gray-400 mb-10">
