Added dark-mode logic to entire web

--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -59,7 +59,8 @@
         person_profiles:'identified_only'
       });
     </script>
-    
+     <!-- Include the theme toggle on ALL pages -->
+{% include "components/darkmode-toggle.njk" %}    
   </head>
 
   <body
