--- a/src/about.njk
+++ b/src/about.njk
@@ -652,10 +652,10 @@ permalink: /about/
   <section class="hero-section">
     <div class="hero-content">
       <p class="hero-greeting">Hello, I'm Rakshit,</p>
-      <h1 class="hero-title">
+      <h1 class="font-display text-4xl leading-none sm:text-3xl">
         <span class="hero-title-line">Marketing</span>
         <span class="hero-title-line">Manager</span>
-      </h1>
+      </h1><br>
       <a href="mailto:rakshitsoral@gmail.com" class="contact-button">Contact Me</a>
       
       <ul class="social-links">
@@ -686,6 +686,8 @@ permalink: /about/
             <img src="/assets/img/Rakshit Soral.png" loading="lazy" alt="Rakshit Soral portrait">
           </div>
         </div>
+              <span class="toggle absolute block bg-no-repeat sm:hidden" aria-hidden="true"></span>
+
       </div>
     </div>
   </section>
@@ -718,6 +720,7 @@ permalink: /about/
           <div class="skill-experience">10+ Years Experience</div>
         </div>
       </div>
+      
     </div>
   </section>
 
