--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -29,7 +29,7 @@
     <meta name="robots" content="index, follow">
 
     <link rel="canonical" href="{{ site.url | url }}{{ page.url }}">
-    <link rel="shortcut icon" type="image/png" href="{{ '/assets/img/favicon.ico' | url }}">
+    <link rel="shortcut icon" type="image/png" href="{{ '/assets/img/Rakshit Soral Favicon.png' | url }}">
     <link rel="apple-touch-icon" href="{{ '/assets/img/apple-touch-icon.png' | url }}">
 
     <!-- Fonts -->
