--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -21,6 +21,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google-site-verification" content="QKAutzM76pfG_N6d0B9tZu8dRRWwCp6IRUQInWLzITI" />
 
     <title>{{ metaTitle }}</title>
     <meta name="title" content="{{ metaTitle }}">
